# solana-staking-platform

./: Anchor.toml  Cargo.toml  Makefile  Readme.md  Readme_test.md  package.json
client/: package-lock.json  package.json  tsconfig.json
client/src/: IRequestData.ts  chain.ts  client.ts  controller.ts  index.ts  main.rs
program/: Cargo.toml
program/src/: consts.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs
program/src/processor/: mod.rs
program/src/processor/staking/: add_to_whitelist.rs  admin_methods.rs  claim.rs  generate_vault.rs  mod.rs  stake.rs  stake3.rs  stake5.rs  unstake.rs
program/src/state/: claim.rs  mod.rs  reward_calculation.rs  stake.rs  structs.rs
program/tests/: add_to_whitelist.rs  claim.rs  common.rs  generate_vault.rs  reward_calculation.rs  stake.rs  unstake.rs
programs/pixel-staking/: Cargo.toml
programs/pixel-staking/src/: lib.rs  structs.rs
rust-client/: Cargo.toml
rust-client/src/: consts.rs  main.rs  structs.rs
rust-client/src/transactions/: add_to_whitelist.rs  claim.rs  generate_vault.rs  mod.rs  stake.rs  unstake.rs
scripts/: airdrop-token.ts  config.ts  create-mints.ts
tests/: pixel-staking.ts  token_helper.ts  user.ts
