[package]
name = "staking_platform"
version = "0.0.1"
edition = "2018"

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.9.0"
borsh = "0.9.0"
borsh-derive = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
spl-associated-token-account = {version = "1.0.3", features = [ "no-entrypoint" ]}
spl-token = { version = "3.2.0", features = [ "no-entrypoint" ] }
spl-token-metadata = { version = "0.0.1", features = [ "no-entrypoint" ] }
num-derive = "0.3.3"
num-traits = "0.2.15"
thiserror = "1.0.31"

[dev-dependencies]
solana-program-test = "=1.9.0"
solana-sdk = "=1.9.0"
tokio = { version = "1.6", features = ["macros"] }
solana-client = "1.9.0"

[lib]
name = "staking_platform"
crate-type = ["cdylib", "lib"]